--- a/Bonobo.Git.Server/Views/Repository/Edit.cshtml
+++ b/Bonobo.Git.Server/Views/Repository/Edit.cshtml
@@ -170,7 +170,11 @@ else
             </th>
             <th class="col pure-control-group">
                 @*@Html.LabelFor(m => m.ServiceAccounts[i].PassLastUpdated)*@
-                @Html.TextBoxFor(m => m.ServiceAccounts[i].PassLastUpdated)
+                @*@Html.TextBoxFor(m => m.ServiceAccounts[i].PassLastUpdated)*@
+                @{var saId = "ServiceAccounts_" + i + "__.PassLastUpdated"; 
+                  var dateValue = Model.ServiceAccounts[i].PassLastUpdated.ToString().Split('/'); 
+                  var formattedDate = dateValue[2].Substring(0, 4) + "-" + (dateValue[0].Length==1?"0"+ dateValue[0]: dateValue[0]) + "-" + (dateValue[1].Length == 1 ? "0" + dateValue[1] : dateValue[1]);}
+                <input class="form-control" type="date" id="@saId" name="ServiceAccounts[@i].PassLastUpdated" value="@formattedDate" onfocus="console.log(this.value)" />
                 @Html.ValidationMessageFor(m => m.ServiceAccounts[i].PassLastUpdated)
                 <button type="button" onclick=" remField(this.id);" id="@btnId" title="Remove Service Account" style="background-color: white; border: none;"><i style="color:red;" class="fa fa-minus-circle"></i></button>
             </th>
@@ -233,7 +237,7 @@ else
 
                     </th>
                     <th class="col pure-control-group">
-                        <input class="form-control" type="datetime" id="Dependencies_{i}__.DateUpdated" name="Dependencies[{i}].DateUpdated" value="1/1/1900" />
+                        <input class="form-control" type="date" id="Dependencies_{i}__.DateUpdated" name="Dependencies[{i}].DateUpdated" value="1/1/1900" />
                         <span class="field-validation-valid text-danger"
                               data-valmsg-for="Dependencies[{i}].DateUpdated"
                               data-valmsg-replace="true">
@@ -288,11 +292,14 @@ else
                         }
                     </td>
                     <th class="pure-control-group">
-                        @Html.TextBoxFor(m => m.Dependencies[i].VersionInUse)
-                        @Html.ValidationMessageFor(m => m.Dependencies[i].VersionInUse)
+                        @Html.TextBoxFor(m => m.Dependencies[i].VersionInUse);
+                        @Html.ValidationMessageFor(m => m.Dependencies[i].VersionInUse);
                     </th>
                     <th class="pure-control-group">
-                        @Html.TextBoxFor(m => m.Dependencies[i].DateUpdated)
+                        @{var depId = "Dependencies_" + i + "__.DateUpdated";
+                            var dateValue = Model.Dependencies[i].DateUpdated.ToString().Split('/');
+                            var formattedDate = dateValue[2].Substring(0, 4) + "-" + (dateValue[0].Length == 1 ? "0" + dateValue[0] : dateValue[0]) + "-" + (dateValue[1].Length == 1 ? "0" + dateValue[1] : dateValue[1]);}
+                        <input class="form-control" type="date" id="@depId" name="Dependencies[@i].DateUpdated" value="@formattedDate" />
                         @Html.ValidationMessageFor(m => m.Dependencies[i].DateUpdated)
                         <button type="button" onclick="DepenremField(this.id);" id=" DependenciesBtn_@i" title="Remove Dependency" style="background-color: white; border: none;"><i style="color:red;" class="fa fa-minus-circle"></i></button>
                     </th>
