--- a/Bonobo.Git.Server/Views/Repository/Edit.cshtml
+++ b/Bonobo.Git.Server/Views/Repository/Edit.cshtml
@@ -205,7 +205,6 @@ else
         </legend>
 
         <template id="Dependencyrow">
-            <table class="pure-table">
                 <tr class="row Dependencies-details" id="Dependencies_{i}" name="Dependencies-details">
                     <th class=" col pure-control-group" style="display:none;">
                         <label> @Resources.Dependencies_ID </label>
@@ -250,11 +249,10 @@ else
                         <button type="button" onclick="DepenremField(this.id);" id=" DependenciesBtn_{i}" title="Remove Dependency" style="background-color: white; border: none;"><i style="color:red;" class="fa fa-minus-circle"></i></button>
                     </th>
                 </tr>
-            </table>
         </template>
 
 
-        <table class="pure-table">
+        <table class="pure-table" id="dependencies-table">
             <tr>
                 <th>Name</th>
                 <th>Version In Use</th>
